@@ -1,3 +1,8 @@
+11 Jul 2011 - trunk
+-------------------
+
+ * Add HttpBl support to rbl operator.
+
 30 Jun 2011 - 2.6.1-rc1
 -------------------
 
